# NamoNexus_v1.0

./: .dockerignore  .env  .gitignore  Dockerfile  Namo_FormGenesis_v1.0_RELEASE_MANIFEST.md  README.md  RELEASE_NOTES_v1.0.md  auto_phase5_autopilot_merge.py  auto_phase5_merge_resolver.py  auto_phase5_merge_with_env.py  auto_resolve_conflicts.py  auto_resolve_genesis_conflicts_v2.sh  auto_resolve_phase5.py  genesis_start.sh  health_report.txt  main.py  namo_git_supervisor_v3.sh  namo_supervisor.py  pyproject.toml  pytest.ini  readme  repro_error.py  requirements-core.txt  requirements-dev.txt  requirements.txt  ruff.toml  run.py  sitecustomize.py.bak  system_health_check.py  test_output.txt  verify_golden_protocol.py
cloud_runtime/: global_memory.json
continuum_runtime/: continuum_memory.json
data/: memory_log.json
deploy/: .env.example  Dockerfile  build_namonexus_zip.py  cloudrun_auto_deploy.py  health_monitor.py
docs/: api_reference.md  architecture_overview.md  deployment_guide.md  emotional_dynamics.md  merge_strategy.md
engine/: dharma_core.py  runtime_governor.py  safety_guard.py  supervisor.py
frontend/: app.js  index.html  style.css
hooks/: post-merge
namo_nexus/: __init__.py  main.py
research_pack/: summary.json
tests/: conftest.py  test_api_http_server.py  test_chat_smoke.py  test_compassion_planner.py  test_context_builder.py  test_deep_wisdom.py  test_dharma_engine.py  test_episode_logger.py  test_exception_handler.py  test_health_and_reflect.py  test_hybrid_store.py  test_memory_retrieval.py  test_meta_awareness.py  test_supervisor.py  (+7 more)
(+181 files in other folders)
