[project]
name = "namonexus"
version = "1.5.0"
description = "NamoNexus: The Interface to Digital Consciousness"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "NamoNexus Team", email = "dev@namonexus.ai"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "psutil>=5.9.8",
    "dash>=2.15.0",
    "httpx>=0.28.1",
    "transformers>=4.40.0; extra == 'ml'",
    "torch>=2.3.0; extra == 'ml'"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
